add auto scroll down toggle

--- a/LogcatToolWin/LogcatToolWin.csproj
+++ b/LogcatToolWin/LogcatToolWin.csproj
@@ -108,6 +108,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
+    <Resource Include="Resources\scroll_down.png" />
     <Content Include="stylesheet.css" />
   </ItemGroup>
   <ItemGroup>
