--- a/LogcatToolDev17/LogcatToolDev17.csproj
+++ b/LogcatToolDev17/LogcatToolDev17.csproj
@@ -45,13 +45,21 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="AdbAgent.cs" />
+    <Compile Include="EditFilterDialog.cs" />
+    <Compile Include="EditFilterDialogControl.xaml.cs" />
     <Compile Include="LogcatOutputToolWindow.cs" />
     <Compile Include="LogcatOutputToolWindowCommand.cs" />
     <Compile Include="LogcatOutputToolWindowControl.xaml.cs">
       <DependentUpon>LogcatOutputToolWindowControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="LogFilterData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="LogcatToolDev17Package.cs" />
+    <Compile Include="SettingDialog.cs" />
+    <Compile Include="SettingDialogControl.xaml.cs">
+      <DependentUpon>SettingDialogControl.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="source.extension.vsixmanifest">
@@ -76,13 +84,30 @@
     <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="17.0.2155-preview2" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="EditFilterDialogControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="LogcatOutputToolWindowControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="SettingDialogControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Resources\Block.png" />
+    <Resource Include="Resources\cancel.png" />
+    <Resource Include="Resources\ClearAll.png" />
     <Content Include="Resources\menuicon.png" />
+    <Content Include="Resources\MobileDeviceIcon.png" />
+    <Content Include="Resources\pkgicon.png" />
+    <Content Include="Resources\preview_image.png" />
+    <Resource Include="Resources\scroll_down.png" />
+    <Resource Include="Resources\settings.png" />
+    <Resource Include="Resources\smartphone.png" />
     <VSCTCompile Include="LogcatToolDev17Package.vsct">
       <ResourceName>Menus.ctmenu</ResourceName>
     </VSCTCompile>
