--- a/LogcatToolDev17/LogcatToolDev17.csproj
+++ b/LogcatToolDev17/LogcatToolDev17.csproj
@@ -60,6 +60,11 @@
     <Compile Include="SettingDialogControl.xaml.cs">
       <DependentUpon>SettingDialogControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="VSPackageResource.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>VSPackageResource.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="source.extension.vsixmanifest">
@@ -103,8 +108,14 @@
     <Resource Include="Resources\ClearAll.png" />
     <Content Include="Resources\menuicon.png" />
     <Content Include="Resources\MobileDeviceIcon.png" />
-    <Content Include="Resources\pkgicon.png" />
-    <Content Include="Resources\preview_image.png" />
+    <Content Include="Resources\pkgicon.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="Resources\preview_image.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <Resource Include="Resources\scroll_down.png" />
     <Resource Include="Resources\settings.png" />
     <Resource Include="Resources\smartphone.png" />
@@ -112,6 +123,12 @@
       <ResourceName>Menus.ctmenu</ResourceName>
     </VSCTCompile>
     <Content Include="Resources\LogcatOutputToolWindowCommand.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="VSPackageResource.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>VSPackageResource.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
